Dimacs CNF tweaks and fixes